# actio

./: Dockerfile  README.md  docker-compose-cluster.yml  docker-compose-standalone.yml  pyproject.toml  test_standalone.py
.github/workflows/: python-package.yml
examples/cluster/: __init__.py  app.py  logging.json
examples/cluster/api/asys/: ActioSystem.py
examples/cluster/api/asys/handlers/: Scheduler.py
examples/cluster/api/asys/services/: Test.py  __init__.py
examples/cluster/cfg/: api.py
examples/standalone/: app.py
examples/standalone/api/: __init__.py
examples/standalone/api/asys/: ActioSystem.py  __init__.py
examples/standalone/api/asys/handlers/: Scheduler.py  __init__.py
examples/standalone/api/asys/services/: Test.py
examples/standalone/cfg/: __init__.py  api.py
src/actio/: __init__.py  actor.py  cluster.py  config.py  crush.py  messages.py  ref.py  registry.py
src/actio/actor/: __init__.py  base.py  context.py  mailbox.py
src/actio/config/: __init__.py  types.py
src/actio/crush/: __init__.py  mapper.py
src/actio/messages/: __init__.py  types.py
src/actio/protocols/: __init__.py  registry.py
src/actio/ref/: __init__.py  types.py
src/actio/registry/: __init__.py  decorator.py  local.py  redis.py
src/actio/system/: __init__.py  base.py  lifecycle.py
