[tool.poetry]
name = "actio"
version = "0.0.7"
description = "Pure Python actor system for building concurrent and distributed applications with async/await support for Python 3.11+"
authors = ["Semenets V. Pavel <p.semenets@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "actio", from = "src" }]
homepage = "https://github.com/xDarkmanx/actio"
repository = "https://github.com/xDarkmanx/actio"
documentation = "https://github.com/xDarkmanx/actio#readme"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Topic :: Communications",
]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.12.4"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[tool.poetry.group.security.dependencies]
bandit = "^1.8.6"

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.2"
pytest-asyncio = ">=1.2.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
anyio = ">=3.7.0"

[tool.flake8]
max-line-length = 127
max-complexity = 25
ignore = "E203,W503"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
